<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>racecar_neo</name>
  <version>1.0.0</version>
  <description>A set of base programs for racecar_neo, a Raspberry Pi powered Autonomous RC Car.</description>
  <maintainer email="cclai@mit.edu">Christopher Lai</maintainer>
  <license>MIT</license>

  <depend>ackermann_msgs</depend>
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>python3-serial</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
